# trajectory-optimization

./: .gitignore  CMakeLists.txt  README.md
buildSimulate/: CMakeCache.txt  MUJOCO_LOG.TXT  Makefile  cmake_install.cmake  mjkey.txt  simulate
buildSimulate/rangev3-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
buildSimulate/rangev3-download/rangev3-prefix/tmp/: rangev3-gitclone.cmake  rangev3-gitupdate.cmake
cmake/: 123  CMakeCache.txt  FindIpopt.cmake  FindMujoco.cmake  Makefile  cmake_install.cmake
cmake/rangev3-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/rangev3-download/rangev3-prefix/src/rangev3-stamp/: rangev3-gitinfo.txt
cmake/rangev3-download/rangev3-prefix/tmp/: rangev3-gitclone.cmake  rangev3-gitupdate.cmake
include/trajectoryOptimization/: constraint.hpp  constraintNew.hpp  cost.hpp  dynamic.hpp  dynamicNew.hpp  mujocoDynamic.hpp
log/: cart_pole1.txt  data1.txt  data2.txt  data3.txt  data4.txt  data5.txt  doublePendulum1.txt  inverted1.txt  inverted2.txt
model/: ball.xml  cart_pole.xml  cart_triple_pole.xml  inverted_double_pendulum.xml  inverted_double_pendulum_2.xml  inverted_pendulum.xml
src/: applyForceOnBall.cpp  basic.cpp  mjvive.cpp  simulate.cpp  trajectoryOptimizationMain.cpp
test/: CMakeLists.txt
test/src/: constraintTest.cpp  mujocoDynamicTest.cpp  mujocoTest.cpp
